# tool-output-truncate-py

./: README.md  pyproject.toml
src/tool_output_truncate/: __init__.py  truncate.py
tests/: test_truncate.py
